[gd_scene load_steps=22 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Level/Scenes/Scene2.gd" type="Script" id=2]
[ext_resource path="res://Level/Scenes/Scene2.5.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/UI/PromptLeft.png" type="Texture" id=4]
[ext_resource path="res://Sprites/UI/PromptRight.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Parallax/Scene2Parts.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Parallax/Scene2Sky.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Parallax/Scene2Parts2.png" type="Texture" id=8]
[ext_resource path="res://Fonts/pixelmix.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Sounds/alarm.wav" type="AudioStream" id=10]
[ext_resource path="res://Sounds/blip_right.wav" type="AudioStream" id=11]
[ext_resource path="res://Sounds/blip_left.wav" type="AudioStream" id=12]
[ext_resource path="res://Sounds/wind2.wav" type="AudioStream" id=13]

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 25, 25 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 5 )
region = Rect2( 25, 0, 25, 25 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 25, 25 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 25, 0, 25, 25 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 9 )

[node name="Node2D" type="Node2D"]
position = Vector2( 288, 450 )
script = ExtResource( 2 )
vibradius = 10
next = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 1 )]
z_as_relative = false
gravity_scale = 0.0
linear_velocity = Vector2( 0, -1200 )
linear_damp = 0.0

[node name="Cinematographer" type="RigidBody2D" parent="."]
gravity_scale = 0.0
linear_velocity = Vector2( 0, -1200 )
linear_damp = 0.0
__meta__ = {
"_editor_description_": "Exists solely so that dampening can be applied to it, slowing down the camera."
}

[node name="Camera2D" type="Camera2D" parent="Cinematographer"]
current = true

[node name="RightPrompt" type="AnimatedSprite" parent="Cinematographer/Camera2D"]
position = Vector2( 50, -170 )
scale = Vector2( 2, 2 )
frames = SubResource( 6 )

[node name="LeftPrompt" type="AnimatedSprite" parent="Cinematographer/Camera2D"]
position = Vector2( -50, -170 )
scale = Vector2( 2, 2 )
frames = SubResource( 3 )

[node name="UIMine" type="Label" parent="Cinematographer/Camera2D"]
self_modulate = Color( 0.858824, 0.0588235, 0.0588235, 1 )
margin_left = -288.0
margin_top = 200.0
margin_right = 288.0
margin_bottom = 216.0
custom_fonts/font = SubResource( 7 )
text = "-- APPROCAHING ORBITAL MINE FIELD --"
align = 1

[node name="Label" type="Label" parent="Cinematographer/Camera2D"]
self_modulate = Color( 0.960784, 0.619608, 0.168627, 1 )
margin_left = -288.0
margin_top = -225.0
margin_right = 288.0
margin_bottom = -209.0
custom_fonts/font = SubResource( 8 )
text = "-- CALIBRATE REDIRECTION THRUSTERS --"
align = 1

[node name="Pause" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="RearLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 1, 0.25 )
motion_mirroring = Vector2( 488, 450 )

[node name="Sky" type="Sprite" parent="ParallaxBackground/RearLayer"]
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )
offset = Vector2( 144, 225 )

[node name="MidLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 1, 0.5 )
motion_mirroring = Vector2( 0, 450 )

[node name="Parts1" type="Sprite" parent="ParallaxBackground/MidLayer"]
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
offset = Vector2( 144, 225 )

[node name="ForeLayer" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = 1
z_as_relative = false
motion_scale = Vector2( 1, 2 )
motion_mirroring = Vector2( 0, 450 )

[node name="Parts2" type="Sprite" parent="ParallaxBackground/ForeLayer"]
scale = Vector2( 2, 2 )
texture = ExtResource( 8 )
offset = Vector2( 144, 225 )

[node name="Tween" type="Tween" parent="."]

[node name="UILoop" type="Timer" parent="."]
wait_time = 0.45
autostart = true

[node name="Alarm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -30.0
autoplay = true

[node name="Bing1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -20.0

[node name="Bong2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -20.0

[node name="WindLoop" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -25.0
autoplay = true

[node name="TweenWind" type="Tween" parent="."]

[connection signal="timeout" from="Pause" to="." method="_on_pause"]
[connection signal="timeout" from="UILoop" to="." method="_UILoop"]
[connection signal="finished" from="Alarm" to="." method="_on_Alarm_loop"]
[connection signal="finished" from="WindLoop" to="." method="_on_WindLoop_finished"]
